--- a/frontend/src/components/Extra/index.css
+++ b/frontend/src/components/Extra/index.css
@@ -1,5 +1,6 @@
-.Landing {
+.Extra {
   background-image: url('../../images/young-palme.jpg');
   width: 100%;
-  height: 300px;
+  height: 200px;
+  transition: 1s ease-in;
 }
