--- a/frontend/src/components/Landing/index.css
+++ b/frontend/src/components/Landing/index.css
@@ -1,5 +1,69 @@
-.Landing {
-  background-image: url('../../images/young-palme.jpg');
+.landingContainer {
   width: 100%;
-  height: 300px;
+  height: 90vh;
+  background-image: url('../../images/young-palme.jpg');
+  text-align: left;
+}
+
+.oversightContainer {
+  padding-left: 30px;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.goBack {
+  height: 10vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.oversightTextContainer {
+  width: 30%;
+  height: 47vh;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.oversightTextContainer * {
+  width: 100%;
+}
+
+.readlistenContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.ctaContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 10vh;
+}
+
+.ctaButton.bottom {
+  background-color: #FF858F;
+}
+
+.ctaButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 4vh;
+  border-radius: 5px;
+}
+
+.readlistenContainer div {
+  width: 48%;
+  height: 4vh;
+  background-color: pink;
 }
