--- a/frontend/src/components/Menu/index.css
+++ b/frontend/src/components/Menu/index.css
@@ -7,5 +7,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: center;
+}
+
+.menuBar a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
 }
