--- a/frontend/src/components/Menu/index.css
+++ b/frontend/src/components/Menu/index.css
@@ -1,6 +1,7 @@
-.menuContainer {
-  margin: 0 auto;
-  width: 42%;
+.menu {
+  position: fixed;
+  margin: 0 auto !important;
+  width: 40%;
   height: 8vh;
   color: #fff;
   background-color: #1a1a1a;
@@ -10,7 +11,18 @@
   align-items: center;
 }
 
-.menuBar a {
+.menuContainer {
+  width: 100%;
+  height: 8vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: fixed;
+  color: #fff;
+  background-color: #1a1a1a;
+}
+
+.menuBar p {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
