--- a/frontend/src/components/Discussion/index.css
+++ b/frontend/src/components/Discussion/index.css
@@ -1,5 +1,105 @@
 .Discussion {
-  width: 100%;
+  width: 80%;
   height: 100vh;
-  background-color: forestgreen;
+  color: #fff;
+  border: 1px solid forestgreen;
+}
+
+.mailboxContainer {
+  width: 100%;
+  height: 387px;
+  display: flex;
+  flex-direction: row;
+  /* width: 277px; */
+  border-radius: 5px;
+  color: #383838;
+}
+
+.inboxContainer {
+  width: 277px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 16px;
+  background-color: #efefef;
+}
+
+.questionContainer {
+}
+
+.questionContainer div {
+  height: 68px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px dotted #9d9d9d;
+}
+
+.questionContainer p {
+  width: 240px;
+}
+
+.postContainer {
+  height: 43px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #DFAA9A;
+}
+
+.openedContainer {
+  width: 533px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+}
+
+.opened {
+  width: 431px;
+  height: 340px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.q {
+  display: flex;
+  height: 130px;
+  flex-direction: column;
+  justify-content: center;
+  line-height: 24px;
+}
+
+.QuestionMetaRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 12px;
+}
+
+.answerContainer {
+  height: 95px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.answerContainer p:nth-child(odd) {
+  font-size: 12px;
+}
+
+.headlineContainer h3 {
+  display: flex;
+  width: 334px;
+  height: 66px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
