--- a/frontend/src/components/Discussion/index.css
+++ b/frontend/src/components/Discussion/index.css
@@ -1,18 +1,18 @@
 .Discussion {
   width: 80%;
-  height: 100vh;
   color: #fff;
-  border: 1px solid forestgreen;
+  border: 1px solid green;
 }
 
 .mailboxContainer {
-  width: 100%;
+  width: 68%;
   height: 387px;
   display: flex;
   flex-direction: row;
-  /* width: 277px; */
+  justify-content: space-between;
   border-radius: 5px;
   color: #383838;
+  background-color: #fff;
 }
 
 .inboxContainer {
@@ -22,6 +22,8 @@
   justify-content: space-between;
   font-size: 16px;
   background-color: #efefef;
+  box-shadow: 6px 0 9px -5px #d6d6d6;
+  border-radius: 4px;
 }
 
 .questionContainer {
@@ -50,10 +52,12 @@
   text-transform: uppercase;
   color: #fff;
   background-color: #DFAA9A;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .openedContainer {
-  width: 533px;
+  width: 505px;
   display: flex;
   flex-direction: column;
   justify-content: center;
