--- a/frontend/src/components/Extra/index.css
+++ b/frontend/src/components/Extra/index.css
@@ -1,11 +1,11 @@
 .Extra {
   width: 100%;
-  height: 200vh;
   padding-top: 8vh;
   transition: 1s ease-in;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border: 1px solid green;
 }
 
 .Extra h1 {
