--- a/frontend/src/components/Landing/index.css
+++ b/frontend/src/components/Landing/index.css
@@ -4,6 +4,7 @@
   background-image: url('../../images/OlofPalme.jpg');
   background-size: cover;
   text-align: left;
+  border: 1px solid green;
 }
 
 .oversightContainer {
@@ -19,9 +20,23 @@
 .goBack {
   height: 19vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.goBack a {
+  height: 22px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.goBack img {
+  width: 31px;
+  height: 22px;
+  padding-right: 12px;
 }
 
 .oversightTextContainer {
