--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 h1 {
   font-size: 48px;
+  line-height: 60px;
 }
 
 h2 {
@@ -40,10 +41,12 @@ h3 {
 
 .dynamicContent h1, .dynamicContent h2 {
   padding-left: 4.6%;
+  color: #fff;
 }
 
-.dynamicContent h1, .dynamicContent h2 {
-  color: #fff;
+.dynamicContent h2 {
+  font-size: 36px;
+  line-height: 60px;
 }
 
 .likeShareContainer {
@@ -52,8 +55,8 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fff;
-  border: 1px solid red;
+  background-color: #fcfcf9;
+  /* border: 1px solid red; */
 }
 
 .likeShareContainer img {
