--- a/frontend/src/components/Discussion/index.css
+++ b/frontend/src/components/Discussion/index.css
@@ -1,7 +1,7 @@
 .Discussion {
   width: 80%;
   color: #fff;
-  border: 1px solid green;
+  /* border: 1px solid green; */
 }
 
 .mailboxContainer {
@@ -40,6 +40,7 @@
 
 .questionContainer p {
   width: 240px;
+  line-height: 23px;
 }
 
 .postContainer {
@@ -63,6 +64,8 @@
   justify-content: center;
   align-items: center;
   background-color: #fff;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .opened {
