--- a/frontend/src/components/Extra/index.css
+++ b/frontend/src/components/Extra/index.css
@@ -5,9 +5,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 1px solid green;
+  /* border: 1px solid green; */
 }
 
 .Extra h1 {
   height: 13vh;
+}
+
+.dataDescription p {
+  font-size: 20px;
+  line-height: 23px;
 }
