--- a/frontend/src/components/Discussion/index.css
+++ b/frontend/src/components/Discussion/index.css
@@ -4,6 +4,11 @@
   /* border: 1px solid green; */
 }
 
+.containerPadding h3 {
+  font-family: 'Akkurat Pro Regular';
+  font-size: 36px;
+}
+
 .mailboxContainer {
   width: 68%;
   height: 387px;
@@ -26,9 +31,6 @@
   border-radius: 4px;
 }
 
-.questionContainer {
-}
-
 .questionContainer div {
   height: 68px;
   display: flex;
@@ -39,6 +41,7 @@
 }
 
 .questionContainer p {
+  font-family: 'Akkurat Pro';
   width: 240px;
   line-height: 23px;
 }
@@ -51,6 +54,7 @@
   align-items: center;
   font-size: 20px;
   text-transform: uppercase;
+  font-family: 'Akkurat Bold';
   color: #fff;
   background-color: #DFAA9A;
   border-bottom-left-radius: 4px;
@@ -74,6 +78,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.opened p {
+  font-family: 'Akkurat Pro Regular';
+  line-height: 24px;
+}
+
+.opened span {
+  font-weight: bold;
 }
 
 .q {
@@ -103,10 +116,16 @@
 }
 
 .headlineContainer h3 {
+  font-family: 'Harriet Display';
   display: flex;
   width: 334px;
   height: 66px;
+  font-size: 24px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.dataContainer h3 {
+  font-size: 24px;
 }
