--- a/frontend/src/components/SimpleSlider/index.css
+++ b/frontend/src/components/SimpleSlider/index.css
@@ -34,8 +34,10 @@
 }
 
 .articlesContainer p {
+  font-family: 'Akkurat Pro Regular';
   font-size: 24px;
   width: 224px;
+  line-height: 28px;
 }
 
 .slider1 {
@@ -78,8 +80,9 @@
 }
 
 .slider1 h2 {
-  color: #1a1a1a;
-  padding: 0;
+  font-family: 'Harriet Display' !important;
+  color: #1a1a1a !important;
+  padding-left: 0 !important;
   padding-top: 38px;
   font-size: 36px;
   line-height: 42px;
@@ -117,6 +120,7 @@
 }
 
 .discussionContainer p {
+  font-family: 'Akkurat Pro';
   text-align: center;
   width: 508px;
   height: 108px;
@@ -128,6 +132,7 @@
 }
 
 h3.dataHeading {
+  font-family: 'Akkurat Pro';
   height: 42px;
   line-height: 28px;
 }
@@ -137,6 +142,7 @@ h3.dataHeading {
 }
 
 .dataContainer p {
+  font-family: 'Akkurat Pro Regular';
   font-size: 24px;
   line-height: 28px;
 }
@@ -149,4 +155,10 @@ h3.dataHeading {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.dataDescription p {
+  font-family: 'Harriet Text';
+  font-size: 20px;
+  line-height: 23px;
 }
