--- a/frontend/src/components/Extra/index.css
+++ b/frontend/src/components/Extra/index.css
@@ -5,7 +5,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* border: 1px solid green; */
+}
+
+.Extra .containerPadding .sliderContainer0 .slick-slide {
+  width: 310px !important;
 }
 
 .Extra h1 {
@@ -22,4 +25,5 @@
   font-family: 'Akkurat Pro Regular';
   font-size: 36px;
   line-height: 60px;
+  margin-bottom: 10px;
 }
