--- a/frontend/src/components/Related/index.css
+++ b/frontend/src/components/Related/index.css
@@ -2,3 +2,11 @@
   width: 100%;
   /* border: 1px solid green; */
 }
+
+.Related .slick-slide {
+  width: 310px;
+}
+
+.Related h1 {
+  margin-bottom: 25px;
+}
